# vedadb-driver

./: .gitignore  AGENT_MEMORY.md  PUBLISH_GUIDE.md  README.md  STRATEGY.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: release-driver-dotnet.yml  release-driver-go.yml  release-driver-java.yml  release-driver-node.yml  release-driver-php.yml  release-driver-python.yml  release-driver-ruby.yml  release-driver-rust.yml
conformance/: README.md  suite.yaml
dotnet/: README.md  VedaBulkInserter.cs  VedaChangeStream.cs  VedaCircuitBreaker.cs  VedaClient.cs  VedaConfig.cs  VedaConnectionPool.cs  VedaCursor.cs  VedaDB.csproj  VedaException.cs  VedaFailover.cs  VedaHealthChecker.cs  VedaInterceptor.cs  VedaLoadBalancer.cs  VedaMetrics.cs  VedaPipeline.cs  VedaPool.cs  VedaProtocol.cs  VedaPubSub.cs  VedaQueryBuilder.cs  VedaQueryCache.cs  VedaRWSplit.cs  VedaResult.cs  VedaRetryPolicy.cs  VedaTlsConfig.cs  VedaUriParser.cs
dotnet/VedaDB/: ChangeStream.cs  VedaDBAsyncClient.cs  VedaDBExtensions.cs  VedaDBMiddleware.cs
dotnet/VedaDB.Tests/: CircuitBreakerTests.cs  ConnectionPoolTests.cs  QueryBuilderTests.cs  RetryPolicyTests.cs  VedaClientTests.cs
go/: README.md  context.go  driver.go  driver_test.go  dsn.go  errors.go  go.mod  protocol.go  sql_driver.go  typed.go  typed_test.go  vedadb.go
go/vedadb/: async_client.go  async_client_test.go  bulk.go  bulk_test.go  cache.go  change_stream.go  circuit.go  circuit_test.go  cursor.go  cursor_test.go  driver_test.go  failover.go  health.go  health_test.go  interceptor.go  load_balance.go  metrics.go  migrator.go  orm.go  orm_test.go  pool.go  pool_test.go  pubsub.go  pubsub_test.go  query_builder.go  query_builder_test.go  retry.go  retry_test.go  rw_split.go  sentinel.go  streams.go  tls.go  uri.go  uri_test.go  vedadb_test.go
java/: .gitignore  README.md  pom.xml
node/: LICENSE  README.md  index.d.ts  index.js  package.json
node/src/: bulk.js  cache.js  change_stream.js  circuit.js  client.js  cursor.js  errors.js  failover.js  health.js  index.js  interceptor.js  load_balance.js  metrics.js  pool.js  protocol.js  pubsub.js  query_builder.js  retry.js  rw_split.js  streams.js  tls.js  types.d.ts  uri.js
node/tests/: bulk.test.js  circuit.test.js  driver.test.js  jest.config.js  pool.test.js  query-builder.test.js  retry.test.js  test_client.js
node/vedadb-orm/: BUILD.md  package.json  tsconfig.json
php/: README.md  composer.json
php/src/: AsyncClient.php  ChangeStream.php  VedaBulkInserter.php  VedaChangeStream.php  VedaClient.php  (+21 more)
python/: .gitignore  MANIFEST.in  README.md  pyproject.toml
python/tests/: conftest.py  test_bulk.py  test_cache.py  test_change_stream.py  test_circuit.py  test_client.py  test_cursor.py  test_driver.py  test_health.py  test_metrics.py  test_pool.py  test_pubsub.py  test_query_builder.py  test_retry.py
python/vedadb/: ASYNC.md  __init__.py  __init__.pyi  aio.py  aio.pyi  async_client.py  bulk.py  cache.py  circuit.py  client.py  client.pyi  cursor.py  driver.py  exceptions.py  failover.py  framework.py  health.py  interceptors.py  load_balance.py  migrations.py  observability.py  orm_advanced.py  pool.py  pool.pyi  protocol.py  pubsub.py  query_builder.py  retry.py  rw_split.py  streams.py  tls.py  uri.py
python/vedadb_orm/: __init__.py  aggregation.py  cache.py  connection.py  document.py  exceptions.py  graph.py  hooks.py  migration.py  model.py  population.py  query.py  relationships.py  schema.py  search.py  session.py  types.py  utils.py  validators.py  vector.py
ruby/: README.md  vedadb.gemspec
rust/: Cargo.toml  README.md
rust/src/: async_client.rs  bulk.rs  cache.rs  change_stream.rs  circuit.rs  client.rs  cursor.rs  error.rs  failover.rs  health.rs  interceptor.rs  lib.rs  load_balance.rs  metrics.rs  pool.rs  protocol.rs  pubsub.rs  query_builder.rs  result.rs  retry.rs  rw_split.rs  tls.rs  uri.rs
src/: App.css  App.tsx  api.ts  index.css  index.ts  sql.ts  types.ts  utils.ts
(+259 files in other folders)
