[package]
name = "vedadb"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Official Rust driver for VedaDB - The Multi-Model Database Engine"
license = "Apache-2.0"
repository = "https://github.com/vedadb/vedadb"
homepage = "https://github.com/vedadb/vedadb/tree/main/drivers/rust"
documentation = "https://docs.rs/vedadb"
readme = "README.md"
keywords = ["vedadb", "database", "multi-model", "sql", "driver"]
categories = ["database"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = { version = "0.26", optional = true }
rustls-pki-types = { version = "1", optional = true }

[features]
# Opt-in TLS backends. Enabling either one allows `Config { tls: true, .. }`
# to actually wrap the socket; without one of these, `connect_with_config`
# refuses to "do TLS" rather than silently sending plaintext after STARTTLS.
#
# `rustls` is fully wired: enabling it pulls in rustls + webpki-roots and
# wraps the TcpStream in a TLS session after STARTTLS completes.
# `native-tls` is still a placeholder gate; the safety check accepts it but
# the actual TLS wrap is not yet implemented for that backend.
default = []
native-tls = []
rustls = ["dep:rustls", "dep:webpki-roots", "dep:rustls-pki-types"]
